# ChangeLog for media-sound/brutefir
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/brutefir/ChangeLog,v 1.18 2012/02/16 18:52:28 phajdan.jr Exp $

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> brutefir-1.0k-r1.ebuild:
  x86 stable wrt bug #397093

  03 Feb 2012; Agostino Sarubbo <ago@gentoo.org> brutefir-1.0k-r1.ebuild:
  Stable for amd64, wrt bug #397093

*brutefir-1.0k-r1 (21 Jun 2009)

  21 Jun 2009; Samuli Suominen <ssuominen@gentoo.org>
  +brutefir-1.0k-r1.ebuild, +files/brutefir-1.0k-ld.patch:
  Use gcc instead of ld as a linker wrt #252338, because -fPIC directly to
  ld isn't valid.

*brutefir-1.0k (01 Jun 2009)

  01 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> +brutefir-1.0k.ebuild:
  Version bump.

  25 Aug 2007; Steve Dibb <beandog@gentoo.org> brutefir-1.0i.ebuild:
  amd64 stable

  02 Aug 2007; Christian Faulhammer <opfer@gentoo.org> brutefir-1.0i.ebuild:
  stable x86

*brutefir-1.0i (12 May 2007)

  12 May 2007; Steve Dibb <beandog@gentoo.org> +brutefir-1.0i.ebuild:
  Version bump, bug 173045

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> brutefir-1.0a.ebuild,
  brutefir-1.0f.ebuild:
  Convert to use elog.

  16 Feb 2006; Diego Pettenò <flameeyes@gentoo.org> brutefir-1.0a.ebuild,
  -brutefir-1.0c.ebuild, brutefir-1.0f.ebuild:
  Drop old version and shorten description.

*brutefir-1.0f (18 Oct 2005)

  18 Oct 2005; Tony Vroon <chainsaw@gentoo.org> +brutefir-1.0f.ebuild:
  Version bump, closes bug #108906.

  04 May 2005; David Holm <dholm@gentoo.org> brutefir-1.0c.ebuild:
  Readded to ~ppc. Please don't remove it without filing a proper bugreport.

*brutefir-1.0c (22 Jan 2005)

  22 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> +brutefir-1.0c.ebuild:
  new upstream version, fixes #77637

  06 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  brutefir-1.0a.ebuild: