@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA1
 
 AUX brutefir-1.0k-ld.patch 4655 RMD160 f98c11e52349e9ab5502d126bbe7751e7bf3eff6 SHA1 8bf0301fadde917d2a3b793f0a4c19924e90f270 SHA256 8ddc87a93892a71b1da62d05ac1b9f17b9e4d8646da6c6ca3221bac85ba8e005
 DIST brutefir-1.0i.tar.gz 246060 RMD160 6aec63a5c81eb9182ea4f9233f38f620cce789f4 SHA1 dc8dd12c8b52a3b2a0c6d1e6cbfa02ccd54f4ec9 SHA256 e0f3988afb0a84a89f38153fd5617615e9bcf32bb747ee981c99c44d3c4236f6
 DIST brutefir-1.0k.tar.gz 246987 RMD160 ceb48be61549c32117f5c355d919faf3a7a8d321 SHA1 fd5ea623ca31c18630c543838664dd1143517c28 SHA256 e262ea30402e06a23c0396b46b38019f7e9bc66493feabb8792d43e16068e715
-EBUILD brutefir-1.0i.ebuild 1305 RMD160 1e96379bb22064c554a6d82c91fb0d3537a4ebcf SHA1 977805eb8921513ac4755d5cdfc0bb81069ad6c1 SHA256 d2003a52aeaae513a0e1a62834ef1ed1abc439bb7936aee343320195cf961241
+EBUILD brutefir-1.0i.ebuild 1312 RMD160 7c7972ea358372abb1941c20ac385f108a86ec3a SHA1 52a0780a6e1219ca79f7ea5411180ae4ea994700 SHA256 6edcd61731a96b8dc5b603c1d93ee418d30aed88ad9375703fa0a6a2f4879838
 EBUILD brutefir-1.0k-r1.ebuild 1340 RMD160 73b0556fa18d74b7d1cca0e51d4ceff5c13dc76c SHA1 912c86db462ec723457558c53a91227f9842bb0b SHA256 9c44e9e719541c3e4bc1364bff583447fbd24fcfd749abd7a776841e1fa64135
-EBUILD brutefir-1.0k.ebuild 1408 RMD160 6c046a5062a79191b56b290f6dae277b0c8cbd18 SHA1 733966f0244ea957631371cd78c37a2b9426d931 SHA256 8b90840b551d294a7ffe62e2f4895bd3735467ecacbd299751e4b1387a773c2c
-MISC ChangeLog 2493 RMD160 dddd2109d18e256a3bb7eeddc02c015c9ef08672 SHA1 77f962c34cc908b697e864a367f89091e2951636 SHA256 4ccdbcbfe0f3444cd28992e41b29b18511f1d5ebd79fce74ca7a9aaf1fa17392
+EBUILD brutefir-1.0k.ebuild 1415 RMD160 8219aabb2c65d800b7cbaf8e41ae7b9e5e102555 SHA1 9e674a4c609d8291c0dd329ae4fa5b91bc0d2df1 SHA256 4310b7b20729ab47fbc47b29e2fb4c1b2cbcecce6687b15a624a04a421e31124
+MISC ChangeLog 2618 RMD160 402ca5e36b35e3bbb6ea2312ba004c6b3d056856 SHA1 575f547a8d44d2b3ed2af571c7e56adb89b8b6ba SHA256 a6dc1601535c30c9bbe49cf7f5694b25976c5ef08244a746f616ddbb2f680500
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAk89UHIACgkQuUQtlDBCeQKcHgCfQKa6gZGP0xzYNlG4+VKkdoLV
-zz8An1UBsqrsX5iGLJdXZh53fTL8faq4
-=QI+p
+iEYEARECAAYFAk/SsC0ACgkQ/ejvha5XGaOyXACg4CNhkHuf72bKz2FXQXEQivtd
+UCAAoLihgMIWAq7V1LJTDLmTatkfr0ng
+=+xwT
 -----END PGP SIGNATURE-----
