@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/brutefir
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/brutefir/ChangeLog,v 1.18 2012/02/16 18:52:28 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/brutefir/ChangeLog,v 1.19 2012/06/09 02:08:39 zmedico Exp $
+
+  09 Jun 2012; Zac Medico <zmedico@gentoo.org> brutefir-1.0i.ebuild,
+  brutefir-1.0k.ebuild:
+  inherit multilib for get_libdir
 
   16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> brutefir-1.0k-r1.ebuild:
   x86 stable wrt bug #397093
